# drawing-robot

./: .gitignore  LICENSE  README.md
include/: parser.hpp
src/: main.cpp  parser.cpp
tests/: CMakeLists.txt  parser_test.cpp
